--- a/index.html
+++ b/index.html
@@ -3,230 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GT1</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/main.css">
-    <script src="https://kit.fontawesome.com/96a6c298a5.js" crossorigin="anonymous"></script>
+    <title>Qatar English Center | مركز تعليم اللغة الإنجليزية في قطر</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="images/logo.png" class="logo" alt="logo"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-            <a class="nav-link" href="#home">الرئيسية</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#services">الخدمات</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#brands">العلامات التجارية</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#contact">أتصل بنا</a>
-            </li>
-        </ul>
-                <a href="#contact" class="booking-btn">أحجز الأن</a>
-
+    <header>
+        <div class="container">
+            <h1>Qatar English Center</h1>
+            <p class="subtitle">مركز تعليم اللغة الإنجليزية في قطر - دورات فردية بإشراف معلمين معتمدين</p>
+            <nav>
+                <a href="#about">عن المركز</a>
+                <a href="#courses">الدورات</a>
+                <a href="#contact">تواصل معنا</a>
+            </nav>
         </div>
-    </div>
-    </nav>
-
-    <section class="home" id="home">
-        <h1>جي تي 1 لخدمات الصيانة المتنقلة واصلاح السيارات الفاخرة</h1>
-        <p>نقدّم لك صيانة احترافية ومتنقلة لسيارتك الفاخرة، في بيتك أو دوامك، باستخدام أحدث المعدات وعلى يد فنيين مختصين — وتبقى سيارتك دايمًا على أتمّ جاهزية وبأرقى مستوى من الأداء والمظهر.</p>
-        <div class="links">
-            <a href="#contact" class="service-btn">أحجز خدمة الأن</a>
-            <a href="#services" class="service-info">أكتشف خدماتنا</a>
+    </header>
+    <section class="hero">
+        <div class="container">
+            <h2>دورات فردية أونلاين أو حضورياً</h2>
+            <p>ارتقِ بمستواك في اللغة الإنجليزية مع مدرّسين محترفين، عبر جلسات مخصصة لك فقط — في أي وقت، ومن أي مكان في قطر.</p>
+            <a href="#contact" class="cta-btn">احجز جلستك الأولى الآن</a>
         </div>
-
-        <a href="https://wa.me/97430044303" target="_blank" class="whatsapp-btn">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساب" class="whatsapp-icon">
-        </a>
-
-        <div class="images">
-            <div class="row">
-                <div class="col-md-6">
-                    <img src="images/home-1.webp" alt="home">
+    </section>
+    <section id="about" class="about">
+        <div class="container">
+            <h3>لماذا مركزنا؟</h3>
+            <ul>
+                <li>جميع المدرسين معتمدون وذوو خبرة طويلة في تعليم اللغة الإنجليزية.</li>
+                <li>جلسات فردية (واحد إلى واحد) لضمان أفضل نتائج في أقل وقت.</li>
+                <li>مرونة في أوقات الدروس — الصباح أو المساء حسب جدولك.</li>
+                <li>إمكانية التعلم أونلاين أو حضورياً في مقر المركز.</li>
+                <li>اختبارات تحديد مستوى مجانية قبل البدء.</li>
+            </ul>
+        </div>
+    </section>
+    <section id="courses" class="courses">
+        <div class="container">
+            <h3>أنواع الدورات الفردية</h3>
+            <div class="course-list">
+                <div class="course-card">
+                    <h4>دورة محادثة فردية</h4>
+                    <p>حسّن طلاقتك وثقتك بالنفس مع تدريبات مخصصة للمواقف اليومية والعملية.</p>
                 </div>
-                <div class="col-md-6">
-                    <img src="images/home-2.webp" alt="home">
+                <div class="course-card">
+                    <h4>دورة IELTS فردية</h4>
+                    <p>تحضير مكثف لامتحان IELTS مع مدرس خبير — خطط مخصصة ونماذج اختبارات.</p>
                 </div>
-            </div>
-                <div class="row">
-                <div class="col-md-6">
-                    <img src="images/home-3.webp" alt="home">
-                </div>
-                <div class="col-md-6">
-                    <img src="images/home-4.webp" alt="home">
+                <div class="course-card">
+                    <h4>دورة قواعد ولغة أساسية</h4>
+                    <p>تقوية القواعد، بناء المفردات، تحسين الكتابة والقراءة — كل ذلك بطريقة عملية.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="services" id="services">
-        <h2>خدماتنا المتقدمة</h2>
-        <p class="desc">نقدّم خدمات صيانة وإصلاح متخصصة للسيارات الفاخرة في قطر، مع خدمة متنقلة تصل إليك أينما كنت.</p>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="images/clock-copy.png" alt="clock-copy">
-                <h3>استجابة سريعة</h3>
-                <p>نصل إليك في أقل من 60 دقيقة في جميع أنحاء الدوحة وقطر</p>
-            </div>
-            <div class="col-md-4">
-                <img src="images/check-copy.png" alt="check-copy">
-                <h3>فريق متخصص بخبرة عالية</h3>
-                <p>يضم فريقنا نخبة من المتخصصين ذوي الخبرة في صيانة أبرز العلامات التجارية الفاخرة.</p>
-            </div>
-            <div class="col-md-4">
-                <img src="images/settings-copy.png" alt="settings-copy">
-                <h3>صيانة متنقلة بكل احترافية</h3>
-                <p>نصل إليك أينما كنت في قطر لإصلاح سيارتك الفاخرة وفق أعلى معايير الوكالة</p>
-            </div>
+    <section id="contact" class="contact">
+        <div class="container">
+            <h3>تواصل معنا</h3>
+            <p>للاستفسار أو الحجز:</p>
+            <ul>
+                <li>
+                    <b>واتساب:</b> 
+                    <a href="https://wa.me/97412345678" target="_blank">+974 1234 5678</a>
+                </li>
+                <li>
+                    <b>هاتف:</b> 
+                    <a href="tel:97412345678">+974 1234 5678</a>
+                </li>
+                <li>
+                    <b>البريد الإلكتروني:</b> 
+                    <a href="mailto:info@qec.qa">info@qec.qa</a>
+                </li>
+            </ul>
+            <p class="small-note">العنوان: الدوحة - قطر</p>
         </div>
-        <div class="service-item">
-            <div class="content">
-                <h4><img src="images/settings-copy.png" alt="seerings-icon">تغير جميع انواع زيوت السيارة</h4>
-                <p>نقوم بتغيير جميع أنواع زيوت السيارة باستخدام منتجات عالية الجودة تحافظ على أداء المحرك.</p>
-            </div>
-            <div class="service-img">
-                <img src="images/Image_fx.webp" alt="">
-            </div>
-        </div>
-        <div class="service-item">
-            <div class="content">
-                <h4><img src="images/settings-copy.png" alt="seerings-icon">تغير البريكات والدرام ويل</h4>
-                <p>نوفّر خدمة تغيير البريكات والدرام ويل بدقة عالية لضمان أمان القيادة وكفاءة التوقف.</p>
-            </div>
-            <div class="service-img">
-                <img src="images/Image_fx (20).webp" alt="">
-            </div>
-        </div>
-        <div class="service-item">
-            <div class="content">
-                <h4><img src="images/settings-copy.png" alt="seerings-icon">تغير شمعات الاحتراق (البواجي) والكويلات </h4>
-                <p>نقوم باستبدال شمعات الاحتراق (البواجي) والكويلات لضمان تشغيل سلس وأداء محرك مثالي.</p>
-            </div>
-            <div class="service-img">
-                <img src="images/Image_fx (17).webp" alt="">
-            </div>
-        </div>
-        <div class="service-item">
-            <div class="content">
-                <h4><img src="images/settings-copy.png" alt="seerings-icon">فحص كمبيوتر السياره</h4>
-                <p>نقدّم خدمة فحص كمبيوتر شامل لتشخيص الأعطال بدقة وكشف أي مشكلات في أنظمة السيارة الإلكترونية.</p>
-            </div>
-            <div class="service-img">
-                <img src="images/Image_fx (14).webp" alt="">
-            </div>
-        </div>
-        <div class="service-item">
-            <div class="content">
-                <h4><img src="images/settings-copy.png" alt="seerings-icon">تغير بطاريه السيارة</h4>
-                <p>نستبدل بطارية سيارتك بسرعة وكفاءة باستخدام بطاريات أصلية ومعتمدة.</p>
-            </div>
-            <div class="service-img">
-                <img src="images/Image_fx (26).webp" alt="">
-            </div>
-        </div>
-        <div class="service-item">
-            <div class="content">
-                <h4><img src="images/settings-copy.png" alt="seerings-icon">تغير الاجزاء الميكانيكة اسفل السياره</h4>
-                <p>نقوم بتغيير الأجزاء الميكانيكية أسفل السيارة بدقة عالية لضمان سلامة الأداء وثبات القيادة.</p>
-            </div>
-            <div class="service-img">
-                <img src="images/Image_fx (11).webp" alt="">
-            </div>
-        </div>
-    </section>
-    <section class="brands" id="brands">
-        <h2>نخدم جميع العلامات التجارية الفاخرة</h2>
-        <p class="desc">فريق متخصص في صيانة وإصلاح أفخم السيارات العالمية بأعلى معايير الاحترافية.</p>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="images/audi.png" alt="img">
-            </div>
-            <div class="col-md-4">
-                <img src="images/bentley.png" alt="">
-            </div>
-            <div class="col-md-4">
-                <img src="images/bmw.png" alt="">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="images/Mercedes.png" alt="">
-            </div>
-                <div class="col-md-4">
-                    <img src="images/Rolls-Royce.png" alt="">
-            </div>
-                <div class="col-md-4">
-                    <img src="images/ferrari.png" alt="">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <img src="images/maserati.png" alt="">
-            </div>
-            <div class="col-md-4">
-                <img src="images/porsche.png" alt="">
-            </div>
-              <div class="col-md-4">
-                <img src="images/lamborghini.png" alt="">
-            </div>
-        </div>
-    </section>
-    <section class="contact" id="contact">  
-        <h3>أطلب الخدمة الأن</h3>
-        <div class="info">
-            <div class="item">
-                <img src="images/clock-copy.png" alt="clock-copy">
-                <p class="head">ساعات العمل</p>
-                <p class="desc">24/7 طوال أيام الأسبوع</p>
-            </div>
-            <div class="item">
-                <img src="images/map-copy.png" alt="map">
-                <p class="head">نطاق الخدمة</p>
-                <p class="desc">جميع مناطق قطر</p>
-            </div>
-            <div class="item">
-                <img src="images/phone-call-copy.png" alt="phone">
-                <p class="head">أتصل بنا</p>
-                <p class="desc">974-30044303+</p>
-            </div>
-        </div>
-        <a href="https://wa.me/97430044303" target="_blank" class="whatsapp-btn">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="واتساب" class="whatsapp-icon">
-        </a>
     </section>
     <footer>
-
-        <div class="item">
-            <img src="images/logo.png" alt="logo">
-            <p>خدمات صيانة وإصلاح السيارات الفاخرة المتنقلة في جميع أنحاء قطر</p>
-        </div>
-        <div class="item">
-            <p class="head">روابط سريعة</p>
-            <div class="section-links">
-            <a href="#home">الرئيسية</a>
-            <a href="#services">الخدمات</a>
-            <a href="#brands">العلامات</a>
-            <a href="#contact">أتصل بنا</a>
-        </div>
-        </div>
-
-        <div class="item">
-            <p class="head">أتصل بنا</p>
-            <p>الدوحة، قطر</p>
-            <p>974-30044303+</p>
+        <div class="container">
+            <p>&copy; 2025 Qatar English Center | جميع الحقوق محفوظة</p>
         </div>
     </footer>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-    <script src="JS/script.js"></script>
 </body>
 </html>
