إضافة موقعي الجديد بعد حذف القالب القديم

--- a/index.html
+++ b/index.html
@@ -1,86 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qatar English Center | مركز تعليم اللغة الإنجليزية في قطر</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+    <title>Shakespeare Language Center • مركز شكسبير للغات</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Tajawal:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Qatar English Center</h1>
-            <p class="subtitle">مركز تعليم اللغة الإنجليزية في قطر - دورات فردية بإشراف معلمين معتمدين</p>
-            <nav>
-                <a href="#about">عن المركز</a>
-                <a href="#courses">الدورات</a>
-                <a href="#contact">تواصل معنا</a>
-            </nav>
+        <div class="container header-flex">
+            <img src="logo.jpg"
+class="logo" alt="شعار مركز شكسبير للغات">
+            <div>
+                <h1>Shakespeare Language Center</h1>
+                <p class="subtitle">مركز شكسبير للغات في قطر – دورات فردية مع معلمين معتمدين</p>
+            </div>
+            <a class="whatsapp-btn" href="https://wa.me/97433344509" target="_blank">
+                <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="واتساب"> تواصل واتساب
+            </a>
         </div>
+        <nav>
+            <a href="#about">عن المركز</a>
+            <a href="#courses">الدورات</a>
+            <a href="#gallery">صور المركز</a>
+            <a href="#contact">تواصل معنا</a>
+        </nav>
     </header>
     <section class="hero">
-        <div class="container">
-            <h2>دورات فردية أونلاين أو حضورياً</h2>
-            <p>ارتقِ بمستواك في اللغة الإنجليزية مع مدرّسين محترفين، عبر جلسات مخصصة لك فقط — في أي وقت، ومن أي مكان في قطر.</p>
-            <a href="#contact" class="cta-btn">احجز جلستك الأولى الآن</a>
+        <div class="container hero-flex">
+            <div>
+                <h2>ابدأ رحلتك في تعلم الإنجليزية بثقة!</h2>
+                <p>دورات فردية  حضورياً<br>كل الدروس مخصصة لك، بجدول مرن ومع مدرسين معتمدين.</p>
+                <a href="#contact" class="cta-btn">احجز استشارتك المجانية الآن</a>
+            </div>
+            <img class="hero-img" src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=500&q=80" alt="تعلم الإنجليزية">
         </div>
     </section>
     <section id="about" class="about">
         <div class="container">
-            <h3>لماذا مركزنا؟</h3>
-            <ul>
-                <li>جميع المدرسين معتمدون وذوو خبرة طويلة في تعليم اللغة الإنجليزية.</li>
-                <li>جلسات فردية (واحد إلى واحد) لضمان أفضل نتائج في أقل وقت.</li>
-                <li>مرونة في أوقات الدروس — الصباح أو المساء حسب جدولك.</li>
-                <li>إمكانية التعلم أونلاين أو حضورياً في مقر المركز.</li>
-                <li>اختبارات تحديد مستوى مجانية قبل البدء.</li>
-            </ul>
+            <h3>عن المركز</h3>
+            <p>
+                <b>اسم المركز:</b> Shakespeare Language Center • مركز شكسبير للغات<br>
+                <b>رقم المركز:</b> <a href="tel:+97433344509">+974 3334 4509</a><br>
+                <b>بريد إلكتروني:</b> <a href="mailto:a.mazit.youb@gmail.com">a.mazit.youb@gmail.com</a><br>
+                <b>جوجل ماب:</b> <a href="https://g.co/kgs/8jdcyjz" target="_blank">موقعنا على Google Maps</a>
+            </p>
+            <div class="features">
+                <div class="feature">
+                    <img src="https://img.icons8.com/fluency/48/000000/teacher.png" alt="مدرسين معتمدين">
+                    <span>مدرسون معتمدون</span>
+                </div>
+                <div class="feature">
+                    <img src="https://img.icons8.com/color/48/000000/online-support.png" alt="مرونة الوقت">
+                    <span>مرونة تامة في الوقت والمكان</span>
+                </div>
+                <div class="feature">
+                   <img src="https://img.icons8.com/color/48/000000/ok--v1.png" alt="اختبار مجاني">
+                    <span>اختبار مستوى مجاني</span>
+                </div>
+                <div class="feature">
+                    <img src="https://img.icons8.com/color/48/000000/classroom.png" alt="حضور أو أونلاين">
+                    <span>حضورياً أو أونلاين</span>
+                </div>
+            </div>
         </div>
     </section>
     <section id="courses" class="courses">
         <div class="container">
-            <h3>أنواع الدورات الفردية</h3>
-            <div class="course-list">
+            <h3>الدورات الفردية المتاحة</h3>
+            <div class="courses-grid">
                 <div class="course-card">
+                    <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="محادثة إنجليزية">
                     <h4>دورة محادثة فردية</h4>
-                    <p>حسّن طلاقتك وثقتك بالنفس مع تدريبات مخصصة للمواقف اليومية والعملية.</p>
+                    <p>تعلم التحدث بطلاقة في مواقف العمل والحياة اليومية، مع تدريبات عملية وتصحيح مستمر.</p>
                 </div>
                 <div class="course-card">
-                    <h4>دورة IELTS فردية</h4>
-                    <p>تحضير مكثف لامتحان IELTS مع مدرس خبير — خطط مخصصة ونماذج اختبارات.</p>
+                    <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="IELTS">
+                    <h4>تحضير IELTS فردي</h4>
+                    <p>دروس خاصة للتحضير السريع والفعال لامتحان الآيلتس مع نماذج واختبارات تدريبية.</p>
                 </div>
                 <div class="course-card">
-                    <h4>دورة قواعد ولغة أساسية</h4>
-                    <p>تقوية القواعد، بناء المفردات، تحسين الكتابة والقراءة — كل ذلك بطريقة عملية.</p>
+                    <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="قواعد اللغة">
+                    <h4>أساسيات اللغة والقواعد</h4>
+                    <p>رفع مستواك في القراءة، الكتابة، القواعد والمفردات مع خطة تناسب مستواك وهدفك.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <h3>صور من المركز</h3>
+            <div class="gallery-grid">
+                <img src="g.png" alt="صورة صف دراسي">
+                <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=300&q=80" alt="طلاب يتعلمون">
+                <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?auto=format&fit=crop&w=300&q=80" alt="معلم يشرح">
             </div>
         </div>
     </section>
     <section id="contact" class="contact">
         <div class="container">
-            <h3>تواصل معنا</h3>
-            <p>للاستفسار أو الحجز:</p>
-            <ul>
-                <li>
-                    <b>واتساب:</b> 
-                    <a href="https://wa.me/97412345678" target="_blank">+974 1234 5678</a>
-                </li>
-                <li>
-                    <b>هاتف:</b> 
-                    <a href="tel:97412345678">+974 1234 5678</a>
-                </li>
-                <li>
-                    <b>البريد الإلكتروني:</b> 
-                    <a href="mailto:info@qec.qa">info@qec.qa</a>
-                </li>
-            </ul>
-            <p class="small-note">العنوان: الدوحة - قطر</p>
+            <h3>تواصل معنا الآن</h3>
+            <div class="contact-box">
+                <p>راسلنا على الواتساب أو اتصل مباشرة — الاستشارة الأولى مجانًا!</p>
+                <ul>
+                    <li>
+                        <b>واتساب:</b>
+                        <a href="https://wa.me/97433344509" target="_blank">اضغط هنا للدردشة عبر واتساب</a>
+                    </li>
+                    <li>
+                        <b>هاتف:</b>
+                        <a href="tel:+97433344509">+974 3334 4509</a>
+                    </li>
+                    <li>
+                        <b>البريد الإلكتروني:</b>
+                        <a href="mailto:a.mazit.youb@gmail.com">a.mazit.youb@gmail.com</a>
+                    </li>
+                    <li>
+                        <b>موقعنا على Google:</b>
+                        <a href="https://g.co/kgs/8jdcyjz" target="_blank">شاهد الموقع على الخريطة</a>
+                    </li>
+                </ul>
+                <p class="address">العنوان: الدوحة – قطر</p>
+            </div>
         </div>
     </section>
     <footer>
         <div class="container">
-            <p>&copy; 2025 Qatar English Center | جميع الحقوق محفوظة</p>
+            <p>
+                &copy; 2025 Shakespeare Language Center | مركز شكسبير للغات<br>
+                جميع الحقوق محفوظة – تصميم ChatGPT
+            </p>
         </div>
     </footer>
 </body>
